--- a/styles/resource/css/ingame/styles.css
+++ b/styles/resource/css/ingame/styles.css
@@ -11118,24 +11118,68 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-body {
-  background-image: url("../../images/login/bg_2.jpg");
+.resourcen_container {
+  display: flex;
+  justify-content: space-between;
+  align-self: flex-start;
+  background: rgba(22, 23, 22, 0.8);
+  align-items: baseline;
+}
+
+.main_header {
+  display: flex;
+  padding: 5px 0 0 0;
+  background: rgba(22, 23, 22, 0.8);
+}
+.main_header ul {
+  display: inline-flex;
+  list-style: none;
+}
+.main_header ul li {
+  padding: 0 10px 0 0;
+  color: #FFFFFF;
+}
+.main_header ul li a {
+  color: #FFFFFF;
+}
+.main_header ul li a :hover {
+  color: #600200;
+}
+.main_header .left ul li a {
+  text-decoration: none;
+}
+.main_header .left ul li a :active, .main_header .left ul li a :visited {
+  color: #FFFFFF;
+}
+.main_header .left ul li a #newmes {
+  font-size: 0.6rem;
+  margin: 0 0 0 -6px;
+  background: #600200;
+}
+.main_header .left ul li a #newmes #newmesnum {
+  padding: 4px;
+}
+.main_header .center {
+  display: inline-flex;
+  justify-content: center;
+}
+.main_header .center a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.main_header .center a i {
+  margin: 0 0 0 4px;
+}
+.main_header .right ul li a {
+  text-decoration: none;
+}
+.main_header .right ul li a :active, .main_header .right ul li a :visited {
   color: #FFFFFF;
 }
 
-.news {
-  background: rgba(57, 57, 57, 0.4);
-}
-
-.footer {
-  position: sticky;
-  bottom: 0;
-  background: rgba(57, 57, 57, 0.4);
-}
-.footer a {
-  color: #036314;
-  text-decoration: none;
-  font-weight: bolder;
+body {
+  background-image: url("../../images/login/bg_2.jpg");
+  color: #FFFFFF;
 }
 
 /*# sourceMappingURL=styles.css.map */
