- hide modules for players if not activated

--- a/src/scss/_playertrader.scss
+++ b/src/scss/_playertrader.scss
@@ -52,6 +52,8 @@
   .even {
     background: rgba(60, 64, 62, 0.8);
   }
+
+/*../../styles/resource/css/$FileNameWithoutExtension$.css:$FileNameWithoutExtension$.css.map*/
   .trader-buy-button {
     background: #1a351a;
     border: 1px solid #FFFFFF;
@@ -60,7 +62,7 @@
     position: relative;
     height: 30px;
     text-align: center;
-    width: 10rem;
+    width: 5rem;
     cursor: pointer;
 
     span {
